--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
 
     <div class="container">
-        <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
+        <div class="image-item" onclick="openLightbox('iphoto1.jpg')">
             <img src="images/photo1.jpg" alt="Image 1">
             <div class="description">Description 1</div>
         </div>
