--- a/index.html
+++ b/index.html
@@ -81,26 +81,22 @@
     </style>
 </head>
 <body>
-
-    <div class="container">
-        <div class="image-item" onclick="openLightbox('iphoto1.jpg')">
-            <img src="images/photo1.jpg" alt="Image 1">
-            <div class="description">Description 1</div>
-        </div>
-        <div class="image-item" onclick="openLightbox('images/photo2.jpg')">
-            <img src="images/photo2.jpg" alt="Image 2">
-            <div class="description">Description 2</div>
-        </div>
-        <div class="image-item" onclick="openLightbox('images/photo3.jpg')">
-            <img src="images/photo3.jpg" alt="Image 3">
-            <div class="description">Description 3</div>
-        </div>
-        <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
-            <img src="images/photo1.jpg" alt="Image 4">
-            <div class="description">Description 4</div>
-        </div>
-        <!-- Add more image items as needed -->
+<div class="container">
+    <div class="image-item" onclick="openLightbox('https://drive.google.com/file/d/1CjUXlFP0S5dkrd-acbTUb3FxbNMIJlIX/view')">
+        <img src="https://drive.google.com/file/d/1CjUXlFP0S5dkrd-acbTUb3FxbNMIJlIX/view" alt="Image 1">
+        <div class="description">Description 1</div>
     </div>
+    <div class="image-item" onclick="openLightbox('https://drive.google.com/file/d/10czq0TBQ7HHyq-WKDO1sxhU-JfXZwk0i/view')">
+        <img src="https://drive.google.com/file/d/10czq0TBQ7HHyq-WKDO1sxhU-JfXZwk0i/view" alt="Image 2">
+        <div class="description">Description 2</div>
+    </div>
+    <div class="image-item" onclick="openLightbox('https://drive.google.com/file/d/1lkFUmPPx0vCg2wiupxSxKaxMVLOH44rp/view')">
+        <img src="https://drive.google.com/file/d/1lkFUmPPx0vCg2wiupxSxKaxMVLOH44rp/view" alt="Image 3">
+        <div class="description">Description 3</div>
+    </div>
+</div>
+
+
 
     <!-- Lightbox -->
     <div class="lightbox" id="lightbox" onclick="closeLightbox()">
