--- a/index.html
+++ b/index.html
@@ -5,43 +5,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Image Book with Lightbox</title>
     <style>
-        /* Same CSS as provided */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            width: 90%;
+            margin: 20px auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .image-item {
+            width: 250px;
+            height: 250px;
+            margin: 15px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .image-item:hover {
+            transform: scale(1.05);
+        }
+
+        .image-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .image-item .description {
+            padding: 10px;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            font-size: 14px;
+            font-weight: bold;
+            display: none;
+        }
+
+        .image-item:hover .description {
+            display: block;
+        }
+
+        /* Lightbox */
+        .lightbox {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .lightbox img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 10px;
+        }
+
+        .lightbox:active {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="image-item" onclick="openLightbox('https://drive.google.com/uc?export=view&id=1CjUXlFP0S5dkrd-acbTUb3FxbNMIJlIX')">
-        <img src="https://drive.google.com/uc?export=view&id=1CjUXlFP0S5dkrd-acbTUb3FxbNMIJlIX" alt="Image 1">
-        <div class="description">Description 1</div>
-    </div>
-    <div class="image-item" onclick="openLightbox('https://drive.google.com/uc?export=view&id=10czq0TBQ7HHyq-WKDO1sxhU-JfXZwk0i')">
-        <img src="https://drive.google.com/uc?export=view&id=10czq0TBQ7HHyq-WKDO1sxhU-JfXZwk0i" alt="Image 2">
-        <div class="description">Description 2</div>
-    </div>
-    <div class="image-item" onclick="openLightbox('https://drive.google.com/uc?export=view&id=1lkFUmPPx0vCg2wiupxSxKaxMVLOH44rp')">
-        <img src="https://drive.google.com/uc?export=view&id=1lkFUmPPx0vCg2wiupxSxKaxMVLOH44rp" alt="Image 3">
-        <div class="description">Description 3</div>
-    </div>
-</div>
 
-<!-- Lightbox -->
-<div class="lightbox" id="lightbox" onclick="closeLightbox()">
-    <img id="lightboxImage" src="" alt="Enlarged image">
-</div>
+    <div class="container">
+        <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
+            <img src="images/photo1.jpg" alt="Image 1">
+            <div class="description">Description 1</div>
+        </div>
+        <div class="image-item" onclick="openLightbox('images/photo2.jpg')">
+            <img src="images/photo2.jpg" alt="Image 2">
+            <div class="description">Description 2</div>
+        </div>
+        <div class="image-item" onclick="openLightbox('images/photo3.jpg')">
+            <img src="images/photo3.jpg" alt="Image 3">
+            <div class="description">Description 3</div>
+        </div>
+        <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
+            <img src="images/photo1.jpg" alt="Image 4">
+            <div class="description">Description 4</div>
+        </div>
+        <!-- Add more image items as needed -->
+    </div>
 
-<script>
-    function openLightbox(imageSrc) {
-        const lightbox = document.getElementById('lightbox');
-        const lightboxImage = document.getElementById('lightboxImage');
-        lightbox.style.display = 'flex';
-        lightboxImage.src = imageSrc;
-    }
+    <!-- Lightbox -->
+    <div class="lightbox" id="lightbox" onclick="closeLightbox()">
+        <img id="lightboxImage" src="" alt="Enlarged image">
+    </div>
 
-    function closeLightbox() {
-        const lightbox = document.getElementById('lightbox');
-        lightbox.style.display = 'none';
-    }
-</script>
+    <script>
+        function openLightbox(imageSrc) {
+            const lightbox = document.getElementById('lightbox');
+            const lightboxImage = document.getElementById('lightboxImage');
+            lightbox.style.display = 'flex';
+            lightboxImage.src = imageSrc;
+        }
+
+        function closeLightbox() {
+            const lightbox = document.getElementById('lightbox');
+            lightbox.style.display = 'none';
+        }
+    </script>
 
 </body>
 </html>
