--- a/index.html
+++ b/index.html
@@ -3,13 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Image Book with Lightbox</title>
+    <title>Modern Wedding Gallery</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
+            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        nav {
+            background-color: #333;
+            padding: 10px 0;
+            display: flex;
+            justify-content: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 5px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav a:hover {
+            background-color: #575757;
         }
 
         .container {
@@ -56,7 +87,6 @@
             display: block;
         }
 
-        /* Lightbox */
         .lightbox {
             display: none;
             position: fixed;
@@ -78,34 +108,76 @@
         .lightbox:active {
             cursor: pointer;
         }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
+    <header>
+        Modern Wedding Gallery
+    </header>
 
-    <div class="container">
+    <nav>
+        <a href="#boda-glenda">Boda Glenda</a>
+        <a href="#boda-holman">Boda Holman</a>
+        <a href="#boda-norma">Boda Norma</a>
+        <a href="#boda-hilda">Boda Hilda</a>
+        <a href="#general">General</a>
+    </nav>
+
+    <div class="container" id="boda-glenda">
         <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
-            <img src="images/photo1.jpg" alt="Image 1">
-            <div class="description">Description 1</div>
+            <img src="images/photo1.jpg" alt="Boda Glenda 1">
+            <div class="description">Boda Glenda 1</div>
         </div>
         <div class="image-item" onclick="openLightbox('images/photo2.jpg')">
-            <img src="images/photo2.jpg" alt="Image 2">
-            <div class="description">Description 2</div>
+            <img src="images/photo2.jpg" alt="Boda Glenda 2">
+            <div class="description">Boda Glenda 2</div>
         </div>
-        <div class="image-item" onclick="openLightbox('images/photo3.jpg')">
-            <img src="images/photo3.jpg" alt="Image 3">
-            <div class="description">Description 3</div>
-        </div>
-        <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
-            <img src="images/photo1.jpg" alt="Image 4">
-            <div class="description">Description 4</div>
-        </div>
-        <!-- Add more image items as needed -->
     </div>
 
-    <!-- Lightbox -->
+    <div class="container" id="boda-holman">
+        <div class="image-item" onclick="openLightbox('images/photo3.jpg')">
+            <img src="images/photo3.jpg" alt="Boda Holman 1">
+            <div class="description">Boda Holman 1</div>
+        </div>
+    </div>
+
+    <div class="container" id="boda-norma">
+        <div class="image-item" onclick="openLightbox('images/photo4.jpg')">
+            <img src="images/photo4.jpg" alt="Boda Norma 1">
+            <div class="description">Boda Norma 1</div>
+        </div>
+    </div>
+
+    <div class="container" id="boda-hilda">
+        <div class="image-item" onclick="openLightbox('images/photo5.jpg')">
+            <img src="images/photo5.jpg" alt="Boda Hilda 1">
+            <div class="description">Boda Hilda 1</div>
+        </div>
+    </div>
+
+    <div class="container" id="general">
+        <div class="image-item" onclick="openLightbox('images/photo6.jpg')">
+            <img src="images/photo6.jpg" alt="General 1">
+            <div class="description">General 1</div>
+        </div>
+    </div>
+
     <div class="lightbox" id="lightbox" onclick="closeLightbox()">
         <img id="lightboxImage" src="" alt="Enlarged image">
     </div>
+
+    <footer>
+        &copy; 2025 Modern Wedding Gallery. All Rights Reserved.
+    </footer>
 
     <script>
         function openLightbox(imageSrc) {
@@ -120,6 +192,5 @@
             lightbox.style.display = 'none';
         }
     </script>
-
 </body>
 </html>
