--- a/index.html
+++ b/index.html
@@ -7,189 +7,116 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
         }
 
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-            font-size: 24px;
-            font-weight: bold;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        nav {
-            background-color: #333;
-            padding: 10px 0;
+        #login {
             display: flex;
-            justify-content: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 5px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        nav a:hover {
-            background-color: #575757;
-        }
-
-        .container {
-            width: 90%;
-            margin: 20px auto;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .image-item {
-            width: 250px;
-            height: 250px;
-            margin: 15px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-
-        .image-item:hover {
-            transform: scale(1.05);
-        }
-
-        .image-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .image-item .description {
-            padding: 10px;
-            text-align: center;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            font-size: 14px;
-            font-weight: bold;
-            display: none;
-        }
-
-        .image-item:hover .description {
-            display: block;
-        }
-
-        .lightbox {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
             justify-content: center;
             align-items: center;
+            height: 100vh;
+            background-color: #f9f9f9;
         }
 
-        .lightbox img {
-            max-width: 90%;
-            max-height: 90%;
+        #loginForm {
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-        }
-
-        .lightbox:active {
-            cursor: pointer;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
             text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        #loginForm input {
+            display: block;
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        #loginForm button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        #loginForm button:hover {
+            background-color: #45a049;
+        }
+
+        #content {
+            display: none;
+        }
+
+        #error {
+            color: red;
+            font-size: 14px;
+            display: none;
         }
     </style>
 </head>
 <body>
-    <header>
-        Modern Wedding Gallery
-    </header>
-
-    <nav>
-        <a href="#boda-glenda">Boda Glenda</a>
-        <a href="#boda-holman">Boda Holman</a>
-        <a href="#boda-norma">Boda Norma</a>
-        <a href="#boda-hilda">Boda Hilda</a>
-        <a href="#general">General</a>
-    </nav>
-
-    <div class="container" id="boda-glenda">
-        <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
-            <img src="images/photo1.jpg" alt="Boda Glenda 1">
-            <div class="description">Boda Glenda 1</div>
-        </div>
-        <div class="image-item" onclick="openLightbox('images/photo2.jpg')">
-            <img src="images/photo2.jpg" alt="Boda Glenda 2">
-            <div class="description">Boda Glenda 2</div>
-        </div>
+    <!-- Login Section -->
+    <div id="login">
+        <form id="loginForm">
+            <h2>Login</h2>
+            <input type="text" id="username" placeholder="Username" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="button" onclick="login()">Login</button>
+            <p id="error">Invalid username or password.</p>
+        </form>
     </div>
 
-    <div class="container" id="boda-holman">
-        <div class="image-item" onclick="openLightbox('images/photo3.jpg')">
-            <img src="images/photo3.jpg" alt="Boda Holman 1">
-            <div class="description">Boda Holman 1</div>
+    <!-- Protected Content -->
+    <div id="content">
+        <header>
+            Modern Wedding Gallery
+        </header>
+
+        <nav>
+            <a href="#boda-glenda">Boda Glenda</a>
+            <a href="#boda-holman">Boda Holman</a>
+            <a href="#boda-norma">Boda Norma</a>
+            <a href="#boda-hilda">Boda Hilda</a>
+            <a href="#general">General</a>
+        </nav>
+
+        <div class="container" id="boda-glenda">
+            <div class="image-item" onclick="openLightbox('images/photo1.jpg')">
+                <img src="images/photo1.jpg" alt="Boda Glenda 1">
+                <div class="description">Boda Glenda 1</div>
+            </div>
         </div>
-    </div>
 
-    <div class="container" id="boda-norma">
-        <div class="image-item" onclick="openLightbox('images/photo4.jpg')">
-            <img src="images/photo4.jpg" alt="Boda Norma 1">
-            <div class="description">Boda Norma 1</div>
-        </div>
+        <footer>
+            &copy; 2025 Modern Wedding Gallery. All Rights Reserved.
+        </footer>
     </div>
-
-    <div class="container" id="boda-hilda">
-        <div class="image-item" onclick="openLightbox('images/photo5.jpg')">
-            <img src="images/photo5.jpg" alt="Boda Hilda 1">
-            <div class="description">Boda Hilda 1</div>
-        </div>
-    </div>
-
-    <div class="container" id="general">
-        <div class="image-item" onclick="openLightbox('images/photo6.jpg')">
-            <img src="images/photo6.jpg" alt="General 1">
-            <div class="description">General 1</div>
-        </div>
-    </div>
-
-    <div class="lightbox" id="lightbox" onclick="closeLightbox()">
-        <img id="lightboxImage" src="" alt="Enlarged image">
-    </div>
-
-    <footer>
-        &copy; 2025 Modern Wedding Gallery. All Rights Reserved.
-    </footer>
 
     <script>
-        function openLightbox(imageSrc) {
-            const lightbox = document.getElementById('lightbox');
-            const lightboxImage = document.getElementById('lightboxImage');
-            lightbox.style.display = 'flex';
-            lightboxImage.src = imageSrc;
-        }
+        // Set the correct username and password
+        const validUsername = "familia";
+        const validPassword = "familia";
 
-        function closeLightbox() {
-            const lightbox = document.getElementById('lightbox');
-            lightbox.style.display = 'none';
+        function login() {
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+            const error = document.getElementById("error");
+
+            if (username === validUsername && password === validPassword) {
+                document.getElementById("login").style.display = "none";
+                document.getElementById("content").style.display = "block";
+            } else {
+                error.style.display = "block";
+            }
         }
     </script>
 </body>
